[package]
name = "mount_luks"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenvy = "0.15.7"
error-stack = "0.6.0"
nix = { version = "0.30.1", features = ["user"] }
owo-colors = "4.2.3"
rpassword = "7.4.0"
thiserror = "2.0.17"
tracing = "0.1.43"
# v0.3.20 breaks ANSI colors in the terminal
tracing-subscriber = "=0.3.19"
